# Mid-Project

./: CMakeLists.txt  MerkelMain.h  OOP-Midterm-Exchange-Visualising-Toolkit-ver-1-1 (1).docx  main.cpp
